--- a/src/main/resources/templates/user/listUser.html
+++ b/src/main/resources/templates/user/listUser.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="layout/layout :: head"/>
-<body>
-<!--HEADER-->
 <header th:replace="layout/layout :: header"/>
 
-<!--CONTAINER-->
+<body>
 <div class="container py-5">
     <div class="card bg-light">
         <div class="card-header">
@@ -18,7 +17,9 @@
             <table class="table table-hover sticky-top">
                 <thead class="bg-success">
                 <tr>
-                    <th>ID</th><th>Name<th>Role</th> <th>Delete</th>
+                    <th>ID</th><th th:text="#{text.user.name}">Name</th>
+                    <th th:text="#{text.user.role}">Role</th>
+                    <th th:text="#{text.user.delete}">Delete</th>
                 </tr>
                 </thead>
                 <tbody th:each="user:${users}">
@@ -34,8 +35,7 @@
         </div>
     </div>
 
-    <!--FOOTER-->
     <footer th:replace="layout/layout :: footer"/>
-
+</div>
 </body>
 </html>
