--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,60 +1,59 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
+
 <head th:replace="layout/layout :: head"/>
-<body>
-<!--HEADER-->
 <header th:replace="layout/layout :: header"/>
 
-<!--CONTAINER-->
+<body>
 <div class="container py-5">
     <div class="card">
         <div class="card-header">
             <label th:text="${title}"/>
             <div th:replace="layout/layout :: info"/>
-
         </div>
         <div class="card-body">
-            <li class="list-group-item">Welcome : <span sec:authentication="name"/></li>
-            <li class="list-group-item">Date: <span th:text="${date}"></span></li>
-            <li class="list-group-item">Logged in from: <span th:text="${time}"></span></li>
-
-
+            <li class="list-group-item"><label th:text="#{text.index.welcome}"/> <span sec:authentication="name"/></li>
+            <li class="list-group-item"><label th:text="#{text.index.date}"/> <span th:text="${date}"></span></li>
+            <li class="list-group-item"><label th:text="#{text.index.logged}"/><span th:text="${time}"></span></li>
         </div>
         <div class="card-body">
-            <div class="alert alert-info" th:if="${#lists.isEmpty(list) }" th:text="'no vist today'"></div>
-
+            <div class="alert alert-info" th:if="${#lists.isEmpty(list) }" th:text="#{text.index.visit}">
+            </div>
             <table class="table table-hover sticky-top" th:if="${not #lists.isEmpty(list)}">
                 <thead class="bg-success">
                 <tr>
-                    <th>lp</th><th>Id</th><th>Client</th><th>Data created</th><th>Description</th>
-                    <th>Data visit</th><th>Time visit</th><th>Total price<th>Status</th><th>Details</th>
+                    <th>lp</th><th>Id</th>
+                    <th th:text="#{text.index.client}">Client</th>
+                    <th th:text="#{text.index.dateCreated}">Data created</th>
+                    <th th:text="#{text.index.description}">Description</th>
+                    <th th:text="#{text.index.dateVisit}">Data visit</th>
+                    <th th:text="#{text.index.timeVisit}">Time visit</th>
+                    <th th:text="#{text.index.totalPrice}">Total price</th>
+                    <th th:text="#{text.index.status}">Status</th>
+                    <th th:text="#{text.index.details}">Details</th>
                 </tr>
                 </thead>
                 <tbody th:if="${not #lists.isEmpty(list)}" th:each="listvisit,lp:${list}">
                 <tr>
                     <td th:text="${lp.count}">1</td>
-
                     <td th:text="${listvisit.id}"></td>
                     <td><a th:href="@{/client/} + ${listvisit.client.id}" th:text="${listvisit.client.name} + ' ' +${listvisit.client.surname}"/></td>
                     <td th:text="${listvisit.createDate}"></td>
                     <td th:text="${listvisit.description}"></td>
                     <td th:text="${listvisit.visitDate}"></td>
                     <td th:text="${listvisit.visitTime}"></td>
-                    <td th:text="${listvisit.totalPrice}">
-                    <td><img th:if="${listvisit.status == false}" style="width: 20px" th:src="@{/image/xx.png}"/>
-                    <img th:if="${listvisit.status == true}" style="width:20px" th:src="@{/image/okk.png}"/></td>
-
-                    <td style="width:20px"><a th:href="@{/visit/} + ${listvisit.id}" class="btn btn-info">Details</a> </td>
+                    <td th:text="${listvisit.totalPrice}"></td>
+                    <td><img th:if="${!listvisit.status}" style="width: 20px" th:src="@{/image/xx.png}"/>
+                    <img th:if="${listvisit.status}" style="width:20px" th:src="@{/image/okk.png}"/></td>
+                    <td style="width:20px"><a th:href="@{/visit/} + ${listvisit.id}" class="btn btn-info"
+                                              th:text="#{text.index.details}"></a> </td>
                 </tr>
                 </tbody>
             </table>
-
-
         </div>
     </div>
     </div>
 
-    <!--FOOTER-->
     <footer th:replace="layout/layout :: footer"/>
 
 </body>
