--- a/src/main/resources/templates/massage/detailsMassage.html
+++ b/src/main/resources/templates/massage/detailsMassage.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head th:replace="layout/layout :: head"/>
-<body>
-<!--HEADER-->
 <header th:replace="layout/layout :: header"/>
 
-<!--CONTAINER-->
+<body>
 <div class="container pt-5">
 
     <div class="card bg-light">
@@ -18,7 +17,8 @@
             <table class="table sticky-top">
                 <thead class="bg-success">
                 <tr>
-                    <th>ID</th><th>Name</th><th>Price</th>
+                    <th>ID</th><th th:text="#{text.massage.name}">Name</th>
+                    <th th:text="#{text.massage.price}">Price</th>
                 </tr>
                 </thead>
                 <tr>
@@ -31,6 +31,7 @@
 </div>
 
     <footer th:replace="layout/layout :: footer"/>
+
 </div>
 </body>
 </html>
